# projet_c

./: .gitignore.txt  CMakeLists.txt  README.md  addRadio.glade  addRadio.glade~  app.glade  app.glade~  audio_func.c  audio_func.h  db_func.c  db_func.h  dbconf.h  gtk_functions.c  gtk_functions.h  main.c  musicItem.glade  musicItem.glade~  musicListItem.glade  musicListItem.glade~  musicRow.glade  radiochild.glade~  radiofunc.c  radiofunc.h  settings_func.c  settings_func.h  struct_func.c  struct_func.h  structures.h
mariadb_con_test/: CMakeLists.txt
settings/: config.txt
style/: theme.css
untitled/: CMakeLists.txt  main.c
